<resources>
    <string name="app_name">netsips</string>

    <string name="login_header_text">The content you like.\nDelivered whenever you want.</string>
    <string name="login_sub_header_text">Join us today and never miss another article you wanted to read or the video you wanted to see.</string>
    <string name="login_logo_image_content_description">netsips logo</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_failed">Sign in failed.</string>
    <string name="navigation_archive">Archive</string>
    <string name="navigation_home">Recent</string>
    <string name="navigation_settings">Settings</string>
    <string name="current_session">Home</string>
    <string name="navigation_search">tags</string>
    <string name="navigation_delete">trash</string>
    <string name="save_article_confirmation">Save this article to your current session?</string>
    <string name="article_added">Article added to your current session</string>

    <string name="metadata_api_base_url">https://api.urlmeta.org</string>

    <string name="pref_key_days">days_selected</string>
    <string name="pref_title_days">Days you want to be reminded</string>
    <string name="pref_def_summary_days">Not set</string>
    <string name="pref_dialog_title_days">Select days</string>
    <string name="archive">Archive</string>
    <string name="no_articles_prompt">Looks like you haven\'t saved any articles\nShare any article with netsips and they\'ll be waiting for you over here :)</string>
    <string name="archive_no_articles_prompt">Looks like there aren\'t any articles in your archive right now\nOnce you\'ve been reminded to read the articles in your current session, they\'ll appear here</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>

    <string name="sign_out_title">Sign out</string>
    <string name="sign_out_message">Are you sure you want to sign out?</string>
    <string name="sign_out_positive">Yes</string>
    <string name="sign_out_neutral">Cancel</string>

    <string name="tags">Tags</string>
    <string name="add_tag">Add tags</string>
    <string name="tag_dialog_positive">Add</string>
    <string name="tag_dialog_negative">Cancel</string>

    <string name="firestore_user_collection_field_article_url" translatable="false">articleURL</string>
    <string name="firestore_user_collection_field_article_image_url" translatable="false">imageUrl</string>
    <string name="firestore_user_collection_field_article_title" translatable="false">title</string>
    <string name="firestore_user_collection_field_article_tags" translatable="false">tags</string>
    <string name="firestore_user_collection_field_date_added" translatable="false">dateAdded</string>
    <string name="firestore_user_collection_field_article_status" translatable="false">status</string>

    <string name="rtd_field_days" translatable="false">days</string>
    <string name="rtd_field_days_default_value" translatable="false">6</string>
    <string name="rtd_field_email" translatable="false">email</string>

    <string name="save">Save</string>
    <string name="reminded_days">Days you want to be reminded</string>
    <string name="reminded_days_defalut">6</string>
    <string name="add">Add</string>
    <string name="netsips_logo">netsips logo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_about">about</string>

    <string-array name="Languages">
        <item>Java</item>
        <item>Kotlin</item>
        <item>Swift</item>
        <item>Python</item>
        <item>Scala</item>
        <item>Perl</item>
        <item>Javascript</item>
        <item>Jquery</item>
    </string-array>
    <string name="title_activity_trashh">trashhActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="about_text">Netsips is a tool to manage your web bookmarks and make them accessible more easily than ever before. Just drop the link of the content you wish to read or view later on the app, and it will be there waiting for you.
           </string>
    <string name="Manage">MANAGE YOUR BOOKMARKS </string>
    <string name="ManageText">Your bookmarks are compiled according to the date, swipe to delete and add tags for swift access.</string>
    <string name="Newsletter">NEWSLETTER</string>
    <string name="NewsLetterText">Receive a compilation of all the articles you save on Netsips, along with their crisp summaries in both email and PDF format. Read your favorite content later on the move, during a break, before bedtime, or any other time which suits you without any ads! After all, you\'re the one who curated it! Choose your day of the week to receive the newsletter. </string>
    <string name="NewsLetterText2">The newsletter will never let you forget your bookmarks ever again. Promise 🙂</string>
    <string name="Sync">SYNC</string>
    <string name="SyncText">Netsips is also available on Chrome Web Store. Install Netsips for Chrome and sync your PC and mobile bookmarks in real-time.</string>
</resources>
